Se agrega funcionalidad de registrar mail

--- a/UmbracoTechTest/App_Data/umbraco.config
+++ b/UmbracoTechTest/App_Data/umbraco.config
@@ -9,7 +9,7 @@
 <!ATTLIST newItem id ID #REQUIRED>
 ]>
 <root id="-1">
-  <home id="1054" key="4b7b118a-19a3-4f6c-8415-bcd408b27b6b" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2021-09-17T15:18:40" updateDate="2021-09-23T16:59:13" nodeName="Home" urlName="home" path="-1,1054" isDoc="" nodeType="1053" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="1052" nodeTypeAlias="home" isPublished="true">
+  <home id="1054" key="4b7b118a-19a3-4f6c-8415-bcd408b27b6b" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2021-09-17T15:18:40" updateDate="2021-09-28T10:31:21" nodeName="Home" urlName="home" path="-1,1054" isDoc="" nodeType="1053" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="1052" nodeTypeAlias="home" isPublished="true">
     <gridLayoutHome><![CDATA[{
   "name": "1 column layout",
   "sections": [
@@ -42,13 +42,6 @@
               "grid": 4,
               "hasConfig": false,
               "controls": [
-                {
-                  "value": "",
-                  "editor": {
-                    "alias": "rte"
-                  },
-                  "active": false
-                },
                 {
                   "value": {
                     "macroAlias": "SecondaryNews",
@@ -127,7 +120,7 @@
         <image><![CDATA[umb://media/599ee85447424f08821a05467610a167]]></image>
       </newItem>
     </news>
-    <aboutUs id="1074" key="929a16c8-3e2a-4377-91dc-5608f4f10392" parentID="1054" level="2" creatorID="0" sortOrder="1" createDate="2021-09-20T10:34:45" updateDate="2021-09-23T17:35:46" nodeName="About Us" urlName="about-us" path="-1,1054,1074" isDoc="" nodeType="1072" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="1071" nodeTypeAlias="aboutUs" isPublished="true">
+    <aboutUs id="1074" key="929a16c8-3e2a-4377-91dc-5608f4f10392" parentID="1054" level="2" creatorID="0" sortOrder="1" createDate="2021-09-20T10:34:45" updateDate="2021-09-28T10:23:43" nodeName="About Us" urlName="about-us" path="-1,1054,1074" isDoc="" nodeType="1072" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="1071" nodeTypeAlias="aboutUs" isPublished="true">
       <gridLayoutAbout><![CDATA[{
   "name": "1 column layout",
   "sections": [
@@ -153,7 +146,7 @@
                       "Image": "umb://media/7a408138ca5b4bc895935f24602ed94c",
                       "Title": "Título",
                       "ContentText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam auctor aliquam purus id vulputate. Aenean accumsan mauris ut nunc hendrerit, mattis eleifend magna efficitur. Nam nec nulla metus. Curabitur eros lacus, vulputate ac dapibus a, dictum ut neque. Aliquam at nisl non elit tempus porttitor a ac nisi. \n\nNam ullamcorper et magna sed scelerisque. Etiam sollicitudin pellentesque pulvinar. Integer porttitor diam id urna placerat hendrerit.\n\nNullam leo dui, tempus vel tellus quis, feugiat pellentesque nisl. Nunc laoreet, purus non pellentesque mattis, eros sem gravida libero, eget condimentum elit enim vel dolor. Nullam sagittis, felis eu convallis consectetur, dui ipsum elementum mi, nec placerat leo dolor at tortor. Nunc id mollis elit, ac bibendum nisi. Aliquam ante tellus, posuere a feugiat sit amet, luctus vitae orci. Duis nec turpis non ante lacinia dignissim. Ut a mi eget urna faucibus dignissim semper in erat. Pellentesque vitae pharetra nisl. Nam commodo convallis bibendum.\n\nNunc malesuada, ligula eu venenatis ornare, tortor felis elementum eros, id placerat est arcu sit amet ante. Sed in mi ac purus euismod mollis a et ex. Donec risus velit, porttitor quis purus nec, pharetra dictum mi. Proin sed placerat mi, sit amet scelerisque dolor. Pellentesque rutrum ipsum eu gravida scelerisque. Aliquam non sollicitudin felis, nec congue erat. In hac habitasse platea dictumst. Donec ornare tellus turpis, at feugiat libero rhoncus sit amet. Aliquam congue tortor sit amet odio dignissim gravida. Nullam ac ante est. Nunc vulputate cursus massa et egestas. Vestibulum ultricies porttitor sagittis. Sed a ipsum tempus odio vehicula pharetra.",
-                      "Link": "/"
+                      "Link": "#"
                     }
                   },
                   "editor": {
