Se unifica la macro de News

--- a/UmbracoTechTest/UmbracoTechTest.csproj
+++ b/UmbracoTechTest/UmbracoTechTest.csproj
@@ -1913,6 +1913,7 @@
     <Content Include="Views\Subscribe\Index.cshtml" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\MacroPartials\News.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
