--- a/UmbracoTechTest/App_Data/umbraco.config
+++ b/UmbracoTechTest/App_Data/umbraco.config
@@ -9,7 +9,7 @@
 <!ATTLIST newItem id ID #REQUIRED>
 ]>
 <root id="-1">
-  <home id="1054" key="4b7b118a-19a3-4f6c-8415-bcd408b27b6b" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2021-09-17T15:18:40" updateDate="2021-09-28T10:31:21" nodeName="Home" urlName="home" path="-1,1054" isDoc="" nodeType="1053" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="1052" nodeTypeAlias="home" isPublished="true">
+  <home id="1054" key="4b7b118a-19a3-4f6c-8415-bcd408b27b6b" parentID="-1" level="1" creatorID="0" sortOrder="0" createDate="2021-09-17T15:18:40" updateDate="2021-09-29T14:21:15" nodeName="Home" urlName="home" path="-1,1054" isDoc="" nodeType="1053" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="1052" nodeTypeAlias="home" isPublished="true">
     <gridLayoutHome><![CDATA[{
   "name": "1 column layout",
   "sections": [
@@ -25,10 +25,11 @@
               "controls": [
                 {
                   "value": {
-                    "macroAlias": "PrimaryNews",
+                    "macroAlias": "News",
                     "macroParamsDictionary": {
                       "quantityPerPage": "2",
-                      "newsList": "1073"
+                      "newsList": "1073",
+                      "typeNew": "1"
                     }
                   },
                   "editor": {
@@ -44,10 +45,11 @@
               "controls": [
                 {
                   "value": {
-                    "macroAlias": "SecondaryNews",
+                    "macroAlias": "News",
                     "macroParamsDictionary": {
                       "quantityPerPage": "3",
-                      "newsList": "1073"
+                      "newsList": "1073",
+                      "typeNew": "0"
                     }
                   },
                   "editor": {
@@ -55,15 +57,11 @@
                   },
                   "active": false
                 }
-              ],
-              "hasActiveChild": true,
-              "active": true
+              ]
             }
           ],
           "hasConfig": false,
-          "id": "e4990bc3-96a8-5b62-4070-e36885b056e9",
-          "hasActiveChild": true,
-          "active": true
+          "id": "e4990bc3-96a8-5b62-4070-e36885b056e9"
         }
       ]
     }
