--- a/UmbracoTechTest/UmbracoTechTest.csproj
+++ b/UmbracoTechTest/UmbracoTechTest.csproj
@@ -1636,6 +1636,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AboutUsController.cs" />
+    <Compile Include="Controllers\NewItemController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\SubscribeController.cs" />
     <Compile Include="Models\Subscribe.cs">
@@ -1903,7 +1904,6 @@
     <Content Include="Views\Home.cshtml" />
     <Content Include="Views\Layout.cshtml" />
     <Content Include="Views\MacroPartials\MyNew.cshtml" />
-    <Content Include="Views\NewItem.cshtml" />
     <Content Include="Views\MacroPartials\ListNews.cshtml" />
     <Content Include="Views\MacroPartials\PrimaryNews.cshtml" />
     <Content Include="Views\MacroPartials\SecondaryNews.cshtml" />
@@ -1920,6 +1920,7 @@
     <Content Include="Views\MacroPartials\News.cshtml" />
     <Content Include="Views\AboutUs\Index.cshtml" />
     <Content Include="Views\News\Index.cshtml" />
+    <Content Include="Views\NewItem\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
