--- a/UmbracoTechTest/UmbracoTechTest.csproj
+++ b/UmbracoTechTest/UmbracoTechTest.csproj
@@ -1636,6 +1636,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AboutUsController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NewItemController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\SubscribeController.cs" />
@@ -1901,7 +1902,6 @@
     <Content Include="Views\Partials\Grid\Editors\Rte.cshtml" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Home.cshtml" />
     <Content Include="Views\Layout.cshtml" />
     <Content Include="Views\MacroPartials\MyNew.cshtml" />
     <Content Include="Views\MacroPartials\ListNews.cshtml" />
@@ -1921,6 +1921,7 @@
     <Content Include="Views\AboutUs\Index.cshtml" />
     <Content Include="Views\News\Index.cshtml" />
     <Content Include="Views\NewItem\Index.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
