Se adapta el menú para que sea dinámico

--- a/UmbracoTechTest/App_Data/umbraco.config
+++ b/UmbracoTechTest/App_Data/umbraco.config
@@ -117,6 +117,20 @@
         <author><![CDATA[Carlos Jaramillo]]></author>
         <image><![CDATA[umb://media/599ee85447424f08821a05467610a167]]></image>
       </newItem>
+      <newItem id="1106" key="033da991-c532-4eb7-975c-f5365b4dd3db" parentID="1073" level="3" creatorID="0" sortOrder="7" createDate="2021-10-06T14:34:38" updateDate="2021-10-06T14:34:38" nodeName="Eighth News" urlName="eighth-news" path="-1,1054,1073,1106" isDoc="" nodeType="1079" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="0" nodeTypeAlias="newItem" isPublished="true">
+        <title><![CDATA[Eighth News]]></title>
+        <summary><![CDATA[<p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae scelerisque nisl. Nam turpis felis, venenatis a urna quis, mollis vestibulum lectus. Quisque eu leo sed orci aliquet commodo. Integer congue, felis et mattis euismod, velit tortor volutpat lorem, at tempus nibh magna eget ligula. Curabitur non arcu ac tellus blandit ornare. Mauris eu nisl eget velit vulputate dignissim. Morbi id luctus purus. Morbi vel tellus faucibus diam condimentum dapibus. Etiam varius hendrerit nisl at tempus. Mauris sit amet magna eget enim vehicula mollis. Aliquam tempus facilisis nulla viverra sodales.</span></p>]]></summary>
+        <category><![CDATA[Principal]]></category>
+        <author><![CDATA[Carlos Jaramillo]]></author>
+        <image><![CDATA[umb://media/ecc0a10eaa3c4e86bd07564301a0ce85]]></image>
+      </newItem>
+      <newItem id="1107" key="8bc2a55a-c604-4e91-8f5c-ca524872fb0e" parentID="1073" level="3" creatorID="0" sortOrder="8" createDate="2021-10-06T14:36:21" updateDate="2021-10-06T14:36:21" nodeName="Nineth News" urlName="nineth-news" path="-1,1054,1073,1107" isDoc="" nodeType="1079" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="0" nodeTypeAlias="newItem" isPublished="true">
+        <title><![CDATA[Eighth News]]></title>
+        <summary><![CDATA[<p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae scelerisque nisl. Nam turpis felis, venenatis a urna quis, mollis vestibulum lectus. Quisque eu leo sed orci aliquet commodo. Integer congue, felis et mattis euismod, velit tortor volutpat lorem, at tempus nibh magna eget ligula. Curabitur non arcu ac tellus blandit ornare. Mauris eu nisl eget velit vulputate dignissim. Morbi id luctus purus. Morbi vel tellus faucibus diam condimentum dapibus. Etiam varius hendrerit nisl at tempus. Mauris sit amet magna eget enim vehicula mollis. Aliquam tempus facilisis nulla viverra sodales.</span></p>]]></summary>
+        <category><![CDATA[Secondary]]></category>
+        <author><![CDATA[Carlos Jaramillo]]></author>
+        <image><![CDATA[umb://media/78bd49a0409b4848b145dc5eeff2df84]]></image>
+      </newItem>
     </news>
     <aboutUs id="1074" key="929a16c8-3e2a-4377-91dc-5608f4f10392" parentID="1054" level="2" creatorID="0" sortOrder="1" createDate="2021-09-20T10:34:45" updateDate="2021-10-01T10:54:29" nodeName="About Us" urlName="about-us" path="-1,1054,1074" isDoc="" nodeType="1072" creatorName="Carlos Jaramillo" writerName="Carlos Jaramillo" writerID="0" template="0" nodeTypeAlias="aboutUs" isPublished="true">
       <gridLayoutAbout><![CDATA[{
